2007-11-23  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Adam Roben.

        Bug 16110: Clicking inside the resource headers in the network timeline collapses them
        http://bugs.webkit.org/show_bug.cgi?id=16110

        Toggle the resource headers only if the click happens on the
        resource row, not within the headers area.

        * WebCore.xcodeproj/project.pbxproj:
        * page/inspector/NetworkPanel.js:

2007-11-23  Kevin Ollivier  <kevino@theolliviers.com>

        Win build fixes. CURL needs winsock, so don't disable it, and
        include pthreads.h to get the threadsafe *_r functions.

        Reviewed by Adam Roben.

        * config.h:
        * loader/FTPDirectoryDocument.cpp:
        * loader/FTPDirectoryParser.cpp:

2007-11-23  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Move wx settings to project build settings,
        remove some old settings that were masking a build problem,
        and fix include ordering to ensure proper config.h and
        unicode/utf8.h headers are used. 

        * webcore-base.bkl:
        * webcore-wx.bkl:

2007-11-23  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by George Staikos <staikos@kde.org>.

        Another build fix specific to trunk (instead of the stable branch) to fix make clean (which the buildbots call).

        * WebCore.pro:

2007-11-23  Alexey Proskuryakov  <ap@webkit.org>

        Not reviewed, trivial leak fix.

        Fix xsltUnicodeSortFunction() memory leaks.

        * xml/XSLTUnicodeSort.cpp:
        (WebCore::xsltUnicodeSortFunction):

2007-11-23  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        <rdar://problem/5539306> REGRESSION: redirect fails when subframe's document is opened but
        not closed (affects digg.com)

        Tests: fast/loader/meta-refresh-vs-open.html
               fast/loader/redirect-with-open-subframe-2.html
               fast/loader/redirect-with-open-subframe.html